various fixes *add space to "contact us" text *make "back to projects" button visible on mobile *add margin to project's title

--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -12,6 +12,7 @@
     font-weight: bold;
     text-align: center;
     padding-bottom: 20px;
+    margin: 0 15px 0 15px;
 }
 
 .contact-us-button {
